js console check

--- a/app/static/groups.html
+++ b/app/static/groups.html
@@ -87,6 +87,7 @@
             console.log("groupData:", groupData);
             const groups = groupData.map(item => item.name);
             console.log("groups:", groups);
+            console.log("groupData.groups:", groupData.groups);
             const groupBody = collapseRow.querySelector(`#groups-${collapseId}`);
             groupBody.innerHTML = '';
 
