--- a/app/static/index-group-record.html
+++ b/app/static/index-group-record.html
@@ -64,7 +64,7 @@
         if (records && records.length > 0) {
           console.log("records length in:",records.length);
           records.forEach(recordName => {
-            console.log("recordsName:", recordsName);
+            console.log("recordName:", recordName);
             const recordRow = document.createElement('tr');
             recordRow.classList.add('record-row');
             const baseUrl = 'http://192.167.233.88:8087/edit_record';
